@@ -1,30 +1,29 @@
 package com.animetracker.module;
 
-import com.animetracker.dto.UserStatsDto;
-import com.animetracker.entity.User;
-import com.animetracker.repository.ListToViewRepository;
-import com.animetracker.repository.ListViewedRepository;
-import com.animetracker.repository.UserRepository;
+import com.animetracker.admin.UserStatsDto;
+import com.animetracker.tracking.TrackingService;
+import com.animetracker.user.UserRegistrationService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ListUsersModule {
 
-    private final UserRepository userRepository;
-    private final ListViewedRepository listViewedRepository;
-    private final ListToViewRepository listToViewRepository;
+    private final UserRegistrationService userRegistrationService;
+    private final TrackingService trackingService;
 
     public List<UserStatsDto> getAllUsersStats() {
-        return userRepository.findAll().stream().map(user -> {
-            long viewedCount = listViewedRepository.countByUserId(user.getId());
-            long toViewCount = listToViewRepository.countByUserId(user.getId());
-            long ratedCount = listViewedRepository.countRatedByUserId(user.getId());
-            return new UserStatsDto(user.getId(), user.getName(), viewedCount, toViewCount, ratedCount);
-        }).collect(Collectors.toList());
+        return userRegistrationService.findAll().stream()
+                .map(user -> new UserStatsDto(
+                        user.getId(),
+                        user.getName(),
+                        trackingService.countViewed(user.getId()),
+                        trackingService.countToView(user.getId()),
+                        trackingService.countRated(user.getId())
+                ))
+                .toList();
     }
 }
